WiP: host node mobility
NOTE: Ensure INET is installed and included in your projects references to use TurtleMobility

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,3 +1,18 @@
+[General]
+# Turtle Mobility Configuration
+*.host.mobility.typename = "TurtleMobility"
+*.host.mobility.updateInterval = 100ms
+*.host.mobility.constraintAreaMinX = 150m
+*.host.mobility.constraintAreaMinY = 200m
+*.host.mobility.constraintAreaMaxX = 1700m
+*.host.mobility.constraintAreaMaxY = 1100m
+*.host.mobility.initialX = 1750m
+*.host.mobility.initialY = 300m
+*.host.mobility.initialZ = 0m
+
+# Turtle commands (movement script)
+*.host.mobility.turtleScript = xmldoc("mobility.xml")
+
 
 [Config GarbageInTheCanAndSlow]
 network = GarbageInTheCanAndSlow
