--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>SmartGarbageCollection</name>
 	<comment></comment>
 	<projects>
+		<project>inet</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
