--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,18 +1,6 @@
 [General]
-# Turtle Mobility Configuration
-*.host.mobility.typename = "TurtleMobility"
-*.host.mobility.updateInterval = 100ms
-*.host.mobility.constraintAreaMinX = 150m
-*.host.mobility.constraintAreaMinY = 200m
-*.host.mobility.constraintAreaMaxX = 1700m
-*.host.mobility.constraintAreaMaxY = 1100m
-*.host.mobility.initialX = 1750m
-*.host.mobility.initialY = 300m
-*.host.mobility.initialZ = 0m
-
-# Turtle commands (movement script)
-*.host.mobility.turtleScript = xmldoc("mobility.xml")
-
+**host.mobility.typename = "TurtleMobility"
+**host.mobility.turtleScript = xmldoc("turtle.xml", "movements//movement[@id='1']")
 
 [Config GarbageInTheCanAndSlow]
 network = GarbageInTheCanAndSlow
