cleanup of ned file and add path trail

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -2,11 +2,16 @@
 **host.mobility.typename = "TurtleMobility"
 **host.mobility.turtleScript = xmldoc("turtle.xml", "movements//movement[@id='1']")
 
-[Config GarbageInTheCanAndSlow]
-network = GarbageInTheCanAndSlow
+**.visualizer.mobilityVisualizer.displayMovementTrails = true
+**.visualizer.mobilityVisualizer.movementTrailLineColor = "green"
+**.visualizer.mobilityVisualizer.displayVelocities = true
+**.visualizer.mobilityVisualizer.trailLength = 250
 
-[Config GarbageInTheCanAndFast]
-network = GarbageInTheCanAndFast
+[Config GarbageInTheCansAndSlow]
+network = GarbageCollectionSystem
+
+[Config GarbageInTheCansAndFast]
+network = GarbageCollectionSystem
 
 [Config NoGarbageInTheCans]
-network = NoGarbageInTheCans
+network = GarbageCollectionSystem
